# controlrobot

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
.github/workflows/: main.yml
